scripts/nullaway/original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8.txt
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/core/Tablero.java:84: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return tablero.get(point);
		^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/core/Tablero.java:158: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		return new Tablero(this.tablero, null);
		                                 ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/core/Jugador.java:8: error: [NullAway] initializer method does not guarantee @NonNull field estrategia (line 6) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Jugador(EstadoCasilla color) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/core/Jugador.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.estrategia = null; //cargar estrategia desde un archivo
		                ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/ui/FabricaImagenCasilla.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/ui/TableroUI.java:71: error: [NullAway] initializer method does not guarantee @NonNull field tableroLogica (line 63) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public TableroUI() throws HeadlessException {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/ui/TableroUI.java:296: error: [NullAway] switch expression tableroLogica.obtenerTablero().get(new Point(fila, columna)) is @Nullable
				switch(tableroLogica.obtenerTablero().get(new Point(fila, columna))){
				                                         ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java:64: error: [NullAway] initializer method does not guarantee @NonNull field movidasPosibles (line 42) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public UIJuego() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java:96: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
					   leerArchivo(fichero, null);
					                        ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java:97: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
					   tableroUI = new TableroUI(Tablero.TABLERO_LARGO,Tablero.TABLERO_ANCHO, controlador.obtenerTableroLogica(), null);
					                                                                                                              ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:47: error: [NullAway] initializer method does not guarantee @NonNull fields jugadorBlanco (line 34), jugadorNegro (line 35) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Controlador() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:249: error: [NullAway] dereferenced expression penultimaLinea is @Nullable
			String[] dimension1 = penultimaLinea.split(",");
			                                    ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:250: error: [NullAway] dereferenced expression lineaFinal is @Nullable
			String[] dimension2 = lineaFinal.split(",");
			                                ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/Controlador.java:334: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return esquinas;
		^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/JuegoTorneo.java:41: error: [NullAway] initializer method does not guarantee @NonNull field movidasPosibles (line 23) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public JuegoTorneo(int[] estrategia, int[] estrategiaRival, TipoTablero tipoTablero, int tamTablero) {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/JuegoTorneo.java:105: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/evaluacion/EvaluacionEstrategica.java:182: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return esquinas;
		^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/algoritmosGeneticos/EstrategiaFuncionAptitud.java:12: error: [NullAway] @NonNull static field estrategiasCompetidoras not initialized
	private static IChromosome[] estrategiasCompetidoras;
	                             ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/algoritmosGeneticos/EstrategiaFuncionAptitud.java:19: error: [NullAway] assigning @Nullable expression to @NonNull field
		estrategiasCompetidoras = null;
		                        ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/buscadores/NegaMax.java:42: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			return new ResultadoBusqueda(null, evfuncion.evaluar(tablero, tipoTablero, colorJugador));
			                             ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/buscadores/NegaMax.java:45: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			ResultadoBusqueda mejor = new ResultadoBusqueda(null, Integer.MIN_VALUE);
			                                                ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/buscadores/NegaMax.java:51: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
							mejor = new ResultadoBusqueda(null, Integer.MIN_VALUE);
							                              ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/buscadores/NegaMax.java:54: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
							mejor = new ResultadoBusqueda(null, 0);
							                              ^
    (see http://t.uber.com/nullaway )
../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/logica/ia/buscadores/NegaMax.java:57: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
							mejor = new ResultadoBusqueda(null, Integer.MAX_VALUE);
							                              ^
    (see http://t.uber.com/nullaway )
Note: ../original/urlb57eb64056_jacadenac_ISI_Othello_UN_tgz-pJ8-othello_OthelloJ8/src/othello/UIJuego.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
24 errors
